--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
