--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.10.4",
     "@types/react": "18.2.43",
@@ -23,6 +24,7 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.0.0",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
     "lucide-react": "^0.294.0",
@@ -30,6 +32,7 @@
     "next-auth": "^4.24.5",
     "postcss": "8.4.32",
     "react": "18.2.0",
+    "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.0",
     "react-hot-toast": "^2.4.1",
